--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "backend/server.js",
-  "node": "16.13.0",
-  "npm": "8.12.2",
+  "engines": {
+    "node": "16.13.0",
+    "npm": "8.12.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server.js",
