--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,1 +1,6 @@
-
+PORT=4000
+SMPT_HOST=smtp.gmail.com
+SMPT_MAIL=thuan.dinh_dp04@devplus.edu.vn
+SMPT_PASSWORD=gxmyxiotyslytjot
+SMPT_PORT=465
+SMPT_SERVICE=gmail
