--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "engines": {
     "node": "16.13.0",
     "npm": "8.12.2"
@@ -21,5 +20,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemailer": "^6.8.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dd-thuan/contact.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dd-thuan/contact/issues"
+  },
+  "homepage": "https://github.com/dd-thuan/contact#readme",
+  "description": ""
 }
